Linking founds bank-client

--- a/Views/Bank/AddFounds.cshtml
+++ b/Views/Bank/AddFounds.cshtml
@@ -18,13 +18,13 @@
         </div>
         <div class="mb-3">
             <label>Id Client</label>
-            <input  class="form-control" id="" />
+            <input  id="IdClient" name="IdClient" class="form-control" />
 
 
         </div>
 
         <button type="submit" class="btn btn-primary" style="width:150px; height:60px">Add Founds</button>
-        <a asp-controller="Bank" asp-action="Index" class="btn btn-secondary" style="width:150px">
+        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary" style="width:150px">
             Back to home page
         </a>
     </div>
